Add useful comments

--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,7 @@ DOMAIN="http://localhost:3000"
 # Database
 DATABASE_URL="sqlite.db"
 
-# Credentials
+# Credentials (e.g. run `openssl rand -hex 32` to generate a strong secret)
 JWT_SECRET="long-random-strong-string-as-a-serious-secret"
 
 # Email
